spec/.test/config/invalid/entry/metadata.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => [],
    'metadata' => [
        'id1' => [],
        'id2' => 1,
        'id3' => [],
    ],
];
